# OOP_lab5

./: CMakeLists.txt  README.md
include/: custom_memory_resource.h  dynamic_array.h
src/: main.cpp
tests/: test_dynamic_array.cpp  test_memory_resource.cpp
